--- a/homework3/index.html
+++ b/homework3/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>homework3</title>
     <link rel="stylesheet" href="css/style.css" />
-    link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway&display=swap" rel="stylesheet" />
     </head>
 
 
@@ -29,9 +29,9 @@
 
         <div class="row awesome-row">
           <div class="awesome-item">
-            <div class="item-icon"><img src="/img/img klav.png" alt="#" /></div>
+            <div class="item-icon"><img src="img/img klav.png" alt="#" /></div>
 
-            <h4 class="itemtitle awesome-itemtitle">Thoughtful Design</h4>
+            <h4 class="item-title awesome-itemtitle">Thoughtful Design</h4>
             <div class="item-text">
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
@@ -42,9 +42,9 @@
           </div>
 
           <div class="awesome-item">
-            <div class="item-icon"><img src="/img/img lamp.png" alt="#" /></div>
+            <div class="item-icon"><img src="img/img lamp.png" alt="#" /></div>
 
-            <h4 class="itemtitle awesome-itemtitle">Well Crafted</h4>
+            <h4 class="item-title awesome-itemtitle">Well Crafted</h4>
             <div class="item-text">
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
@@ -55,9 +55,9 @@
           </div>
 
           <div class="awesome-item">
-            <div class="item-icon"><img src="/img/img moln.png" alt="#" /></div>
+            <div class="item-icon"><img src="img/img moln.png" alt="#" /></div>
 
-            <h4 class="itemtitle awesome-itemtitle">Easy to Customize</h4>
+            <h4 class="item-title awesome-itemtitle">Easy to Customize</h4>
             <div class="item-text">
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
@@ -81,14 +81,14 @@
 
         <div class="price-row">
           <div class="price-item">
-            <div class="price-item1"><ul>
-              <li><a href="#" class="price-link1">Basic</a></li> </ul>
+            <div class="price-title">
+              <a href="#">Basic</a>
             </div>
-            <div class="price-item2"><ul>
-              <li><a href="#" class="price-link2">$10</a></li> </ul>
+            <div class="price-amount">
+              <a href="#">$10</a>
             </div>
-            <div class="price-item3"><ul>
-              <li><a href="#" class="price-link3">Free for life</a></li> </ul>
+            <div class="price-condition">
+              <a href="#" class="price-link3">Free for life</a>
             </div>
             <div class="price-item4"><ul>
               <li><a href="#" class="price-link4">gb of space</a></li> </ul>
@@ -112,14 +112,14 @@
           </div>
             
           <div class="price-item">
-              <div class="price-item1"><ul>
-                <li><a href="#" class="price-link1">Optima</a></li> </ul>
+              <div class="price-title">
+                <a href="#">Optima</a>
               </div>
-              <div class="price-item2"><ul>
-                <li><a href="#" class="price-link2">$20</a></li> </ul>
+              <div class="price-amount">
+                <a href="#" class="price-link2">$20</a>
               </div>
-              <div class="price-item5"><ul>
-                <li><a href="#" class="price-link3">Free for life</a></li> </ul>
+              <div class="price-condition-ext">
+                <a href="#">Free for life</a>
               </div>
               <div class="price-item4"><ul>
                 <li><a href="#" class="price-link4">gb of space</a></li> </ul>
@@ -143,14 +143,14 @@
             </div>
 
             <div class="price-item">
-              <div class="price-item1"><ul>
-                <li><a href="#" class="price-link1">Pro</a></li> </ul>
+              <div class="price-title">
+                <a href="#">Pro</a>
               </div>
-              <div class="price-item2"><ul>
-                <li><a href="#" class="price-link2">$30</a></li> </ul>
+              <div class="price-amount">
+                <a href="#">$30</a>
               </div>
-              <div class="price-item3"><ul>
-                <li><a href="#" class="price-link3">Free for life</a></li> </ul>
+              <div class="price-condition">
+                <a href="#">Free for life</a>
               </div>
               <div class="price-item4"><ul>
                 <li><a href="#" class="price-link4">gb of space</a></li> </ul>
