--- a/landing 3/index.html
+++ b/landing 3/index.html
@@ -267,7 +267,7 @@
         <div class="clients-slide clients-slide1">
           <!--вместо your-class-->
           <div class="clients-photo">
-            <img src="/image/photo/clients 1.png" alt="#" />
+            <img src="image/photo/clients 1.png" alt="#" />
           </div>
           <div class="clients-block">
             <!--вместо your content-->
@@ -282,7 +282,7 @@
 
       <div class="clients-slide clients-slide2">
         <div class="clients-photo">
-            <img src="/image/photo/clients 1.png" alt="#" />
+            <img src="image/photo/clients 1.png" alt="#" />
           </div>
           <div class="clients-block">
             <!--вместо your content-->
@@ -297,7 +297,7 @@
 
       <div class="clients-slide clients-slide3">
         <div class="clients-photo">
-            <img src="/image/photo/clients 1.png" alt="#" /></div>
+            <img src="image/photo/clients 1.png" alt="#" /></div>
           <div class="clients-block">
             <!--вместо your content-->
             <p class="clients-words">
@@ -311,7 +311,7 @@
 
       <div class="clients-slide clients-slide4">
         <div class="clients-photo">
-            <img src="/image/photo/clients 1.png" alt="#" /></div>
+            <img src="image/photo/clients 1.png" alt="#" /></div>
           <div class="clients-block">
             <!--вместо your content-->
             <p class="clients-words">
@@ -325,7 +325,7 @@
 
       <div class="clients-slide clients-slide5">
         <div class="clients-photo">
-            <img src="/image/photo/clients 1.png" alt="#" /></div>
+            <img src="image/photo/clients 1.png" alt="#" /></div>
           <div class="clients-block">
             <!--вместо your content-->
             <p class="clients-words">
